# sha256_literal

./: .clang-tidy  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build_cmake.yml
cmake/: Conan.cmake  StandardProjectSettings.cmake
include/: intmem.h  sha256.h  sha256_literal.h
source/: CMakeLists.txt  main.cpp  sha256.cpp
test/: CMakeLists.txt  tests.cpp
